# st_drone

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
cmake/: arm-none-eabi.cmake
comms/: CMakeLists.txt  hil.c  hil.h  mavlink_rx.c  mavlink_rx.h  mavlink_tx.c  mavlink_tx.h
esp32/: CMakeLists.txt  CMakePresets.json  README.md  env.sh  sdkconfig.defaults
esp32/main/: main.c
flight/: CMakeLists.txt  attitude.c  attitude.h  mixer.c  mixer.h  pid.c  pid.h
hal/: CMakeLists.txt  hal.h
hal/hitl/: hal_imu_hitl.c  hal_pwm_hitl.c  hal_time_hitl.c  hal_uart_hitl.c  hal_usb_cdc.c  hal_usb_cdc.h
hal/hitl/usb/: usbd_cdc_if.c  usbd_cdc_if.h  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h
hal/stm32/: hal_imu.c  hal_init.c  hal_pwm.c  hal_time.c  hal_uart.c
openspec/changes/archive/2026-04-19-add-esp32-blink/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-19-add-esp32-blink/specs/esp32-project-setup/: spec.md
openspec/changes/archive/2026-04-19-add-fc-base-structure/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-19-add-fc-base-structure/specs/fc-hitl-mode/: spec.md
openspec/changes/archive/2026-04-19-cmake-build-setup/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-19-cmake-build-setup/specs/cmake-toolchain/: spec.md
openspec/changes/archive/2026-04-19-cmake-build-setup/specs/conan-integration/: spec.md
openspec/changes/archive/2026-04-19-cmake-build-setup/specs/flash-debug-targets/: spec.md
openspec/specs/blink-firmware/: spec.md
openspec/specs/esp32-project-setup/: spec.md
openspec/specs/fc-module-structure/: spec.md
openspec/specs/fc-unit-tests/: spec.md
openspec/specs/stm32-cmake-integration/: spec.md
profiles/: arm-none-eabi
scripts/: flightgear_out.xml  jsbsim_hitl_bridge.py  pybullet_hitl_bridge.py
sensors/: CMakeLists.txt  baro.h  imu.h
src/: main.c  stm32f4xx_hal_conf.h
tests/: CMakeLists.txt  CMakePresets.json  test_mixer.c  test_pid.c
